# Distributed-Key-Value-Store

./: CMakeLists.txt  Dockerfile  README.md  client.cpp  consistent_hash.cpp  consistent_hash.hpp  docker-compose.yml  main.cpp  raft.cpp  raft.hpp  server.cpp  server.hpp  thread_pool.cpp  thread_pool.hpp  wal.cpp  wal.hpp
.github/workflows/: docker-publish.yml
client/: package-lock.json
client/src/: App.jsx
gateway/: package-lock.json  package.json  server.js
